<resources>
    <string name="app_name">NMedia</string>
    <string name="activity_main_nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_shares">Post shares</string>
    <string name="description_post_views">Post views</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="content_is_empty_toast">Content can\'t be empty</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_cancel">Cancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_add">Add post</string>
    <string name="description_post_video_play">Play video</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s published new post:</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
</resources>